@@ -1,5 +1,6 @@
 01/01/2009
 - bugfix for obtaining plugins which must be included (related to change of 12/30/2009)
+- bugfix for {php} tag (trow an exception if allow_php_tag = false)
 
 12/31/2009
 - optimization of generated code for doublequoted strings containing variables
